force-app/main/default/objects/Event_Expense__c/Event_Expense__c.object-meta.xml
<CustomObject>
    <label>HL_Expense Request</label>
    <nameField>
        <displayFormat>EE{00000000}</displayFormat>
        <label>Expense Preapproval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HL_Expense Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>