force-app/main/default/objects/Event_Expense__c/fields/Any_additional_cost_Specify__c.field-meta.xml
<CustomField>
    <fullName>Any_additional_cost_Specify__c</fullName>
    <inlineHelpText>Enter all other costs here. Put 0 if N/A</inlineHelpText>
    <label>Other Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>