force-app/main/default/objects/Event_Expense__c/fields/Any_additional_requests__c.field-meta.xml
<CustomField>
    <fullName>Any_additional_requests__c</fullName>
    <label>Any additional requests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>