force-app/main/default/objects/Event_Expense__c/fields/Approver_s_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approver_s_Notes__c</fullName>
    <label>Approver&apos;s Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>