force-app/main/default/objects/Event_Expense__c/fields/Asked_to_Present__c.field-meta.xml
<CustomField>
    <fullName>Asked_to_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RFC#2547 - created new field as part of CF Expense Request functionality</description>
    <label>Asked to Present?</label>
    <type>Checkbox</type>
</CustomField>