force-app/main/default/objects/Event_Expense__c/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <formula>LEFT($Api.Enterprise_Server_URL_300, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_300))+ Id</formula>
    <label>Base URL</label>
    <type>Text</type>
</CustomField>