force-app/main/default/objects/Event_Expense__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <description>RFC#2547 - created new field as part of CF Expense Request functionality</description>
    <formula>TEXT(Event__r.Classification__c)</formula>
    <label>Classification</label>
    <type>Text</type>
</CustomField>