force-app/main/default/objects/Event_Expense__c/fields/Current_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Approval_Level__c</fullName>
    <label>Current Approval Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>