force-app/main/default/objects/Event_Expense__c/fields/Current_Approver__c.field-meta.xml
<CustomField>
    <fullName>Current_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Expenses1</relationshipName>
    <type>Lookup</type>
</CustomField>