force-app/main/default/objects/Event_Expense__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RFC#2547 - created new field as part of CF Expense Request functionality</description>
    <label>Event</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>HL Internal Opportunity, HL Internal Opportunity</value>
        </filterItems>
        <filterItems>
            <field>Opportunity__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>CF</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>HL Expense Requests</relationshipLabel>
    <relationshipName>HL_Expense_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>