force-app/main/default/objects/Event_Expense__c/fields/Event_Contact__c.field-meta.xml
<CustomField>
    <fullName>Event_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Admin or banker in charge of event</inlineHelpText>
    <label>Event Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HL_Expense Requests (Event Contact)</relationshipLabel>
    <relationshipName>Event_Expenses1</relationshipName>
    <type>Lookup</type>
</CustomField>