force-app/main/default/objects/Event_Expense__c/fields/Event_Format__c.field-meta.xml
<CustomField>
    <fullName>Event_Format__c</fullName>
    <label>Event Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staff Entertainment</fullName>
            </value>
            <value>
                <fullName>Branding and Leadership (IP)</fullName>
            </value>
            <value>
                <fullName>Conference/Seminar</fullName>
            </value>
            <value>
                <fullName>Networking Events</fullName>
            </value>
            <value>
                <fullName>Professional Memberships</fullName>
            </value>
            <value>
                <fullName>Sponsorship / Charity Events</fullName>
            </value>
            <value>
                <fullName>Talent Development</fullName>
            </value>
            <value>
                <fullName>Other Professional Event</fullName>
            </value>
            <value>
                <fullName>Client Entertainment</fullName>
            </value>
            <value>
                <fullName>Client Gifts</fullName>
            </value>
            <value>
                <fullName>Closing Party</fullName>
            </value>
            <value>
                <fullName>External Client Meeting</fullName>
            </value>
            <value>
                <fullName>Sporting Events</fullName>
            </value>
            <value>
                <fullName>Other Client Entertainment</fullName>
            </value>
            <value>
                <fullName>Marketing Membership</fullName>
            </value>
            <value>
                <fullName>Regional Marketing</fullName>
            </value>
            <value>
                <fullName>Local Marketing</fullName>
            </value>
            <value>
                <fullName>Service Line Request</fullName>
            </value>
            <value>
                <fullName>FVA Management Request</fullName>
            </value>
            <value>
                <fullName>FY Annual Meeting</fullName>
            </value>
            <value>
                <fullName>CF Charitable Contribution Match</fullName>
            </value>
            <value>
                <fullName>Group Meals</fullName>
            </value>
            <value>
                <fullName>Holiday Party</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Offsite Meeting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Teambuilding Activity</fullName>
            </value>
            <value>
                <fullName>Team Drinks</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>CF Management Request</fullName>
                <isActive>false</isActive>
                <label>CF Management Request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>