force-app/main/default/objects/Event_Expense__c/fields/Event_location__c.field-meta.xml
<CustomField>
    <fullName>Event_location__c</fullName>
    <label>Event Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>