force-app/main/default/objects/Event_Expense__c/fields/Event_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Event_Purpose__c</fullName>
    <label>Event Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>