force-app/main/default/objects/Event_Expense__c/fields/Event_Type_Format__c.field-meta.xml
<CustomField>
    <fullName>Event_Type_Format__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LOB__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Branding and Leadership (IP)</fullName>
            </value>
            <value>
                <fullName>Client Gifts</fullName>
            </value>
            <value>
                <fullName>Closing Party</fullName>
            </value>
            <value>
                <fullName>External Client Meeting</fullName>
            </value>
            <value>
                <fullName>Networking Events</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Professional Memberships</fullName>
            </value>
            <value>
                <fullName>Sponsorship / Charity Events</fullName>
            </value>
            <value>
                <fullName>Sporting Events</fullName>
            </value>
            <value>
                <fullName>Talent Development</fullName>
            </value>
            <value>
                <fullName>ADM - Staff Entertainment</fullName>
            </value>
            <value>
                <fullName>MKTG - Client Entertainment</fullName>
            </value>
            <value>
                <fullName>MKTG - Conference/ Seminar</fullName>
            </value>
            <value>
                <fullName>ADM - Administrative</fullName>
            </value>
            <value>
                <fullName>MKTG - Marketing Trip</fullName>
            </value>
            <value>
                <fullName>MKTG - Marketing Membership</fullName>
            </value>
            <value>
                <fullName>Staff Entertainment</fullName>
            </value>
            <value>
                <fullName>Client Entertainment</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Branding and Advertising</fullName>
            </value>
            <value>
                <fullName>Conference/Summit/Seminar</fullName>
            </value>
            <value>
                <fullName>HL Hosted Client Event</fullName>
            </value>
            <value>
                <fullName>HL Hosted Client Event (during 3rd - party events)</fullName>
            </value>
            <value>
                <fullName>Membership Dues</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Third Party Conference/Seminar Attendance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>