force-app/main/default/objects/Event_Expense__c/fields/Event_Type_Format_Other__c.field-meta.xml
<CustomField>
    <fullName>Event_Type_Format_Other__c</fullName>
    <label>Event Type/ Format (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>