force-app/main/default/objects/Event_Expense__c/fields/Expected_Airfare_Cost__c.field-meta.xml
<CustomField>
    <fullName>Expected_Airfare_Cost__c</fullName>
    <description>RFC#2547 - created new field as part of CF Expense Request functionality</description>
    <inlineHelpText>Enter all flight related costs – airfare, baggage fees, etc. Put 0 if N/A</inlineHelpText>
    <label>Expected Airfare Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>