force-app/main/default/objects/Event_Expense__c/fields/Expected_F_B_cost__c.field-meta.xml
<CustomField>
    <fullName>Expected_F_B_cost__c</fullName>
    <inlineHelpText>Enter all food and beverage costs here. Put 0 if N/A</inlineHelpText>
    <label>Expected F&amp;B Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>