force-app/main/default/objects/Event_Expense__c/fields/Expected_Lodging_Cost__c.field-meta.xml
<CustomField>
    <fullName>Expected_Lodging_Cost__c</fullName>
    <description>RFC#2547 - created new field as part of CF Expense Request functionality</description>
    <inlineHelpText>Enter all lodging related costs – hotel, Airbnb, tips, etc. Put 0 if N/A</inlineHelpText>
    <label>Expected Lodging Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>