force-app/main/default/objects/Event_Expense__c/fields/Expected_Registration_Fee__c.field-meta.xml
<CustomField>
    <fullName>Expected_Registration_Fee__c</fullName>
    <description>RFC#2547 - created new field as part of CF Expense Request functionality</description>
    <inlineHelpText>Enter conference/seminar registration fees or dues here. Put 0 if N/A</inlineHelpText>
    <label>Expected Registration Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>