force-app/main/default/objects/Event_Expense__c/fields/Expected_Travel_cost__c.field-meta.xml
<CustomField>
    <fullName>Expected_Travel_cost__c</fullName>
    <label>Expected Travel Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>