force-app/main/default/objects/Event_Expense__c/fields/HL_Internal_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>HL_Internal_Opportunity_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used for the LOB, &quot;FVA&quot;, as it replaces the need for the Sub Ledger Number &quot;CF&quot; is using.</description>
    <inlineHelpText>Formerly Sub Ledger Number</inlineHelpText>
    <label>HL Internal Opportunity Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity__c.Line_of_Business__c</field>
            <operation>equals</operation>
            <value>FVA</value>
        </filterItems>
        <filterItems>
            <field>Opportunity__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>HL Internal Opportunity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>HL_Expense Requests (HL Internal Opportunity Number)</relationshipLabel>
    <relationshipName>HL_Expense_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>