force-app/main/default/objects/Event_Expense__c/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <description>RFC#2547 - created new field as part of CF Expense Request functionality</description>
    <formula>TEXT(Requestor_Name__r.Industry_Group__c)</formula>
    <label>Industry Group</label>
    <type>Text</type>
</CustomField>