force-app/main/default/objects/Event_Expense__c/fields/Is_Actual_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Actual_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RFC#2547 - created new field as part of CF Expense Request functionality</description>
    <inlineHelpText>Check this box if the date entered is the actual date the event will be held, NOT an estimate.</inlineHelpText>
    <label>Actual Date?</label>
    <type>Checkbox</type>
</CustomField>