force-app/main/default/objects/Event_Expense__c/fields/Is_Clone__c.field-meta.xml
<CustomField>
    <fullName>Is_Clone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Clone</label>
    <type>Checkbox</type>
</CustomField>