force-app/main/default/objects/Event_Expense__c/fields/Marketing_support__c.field-meta.xml
<CustomField>
    <fullName>Marketing_support__c</fullName>
    <label>Marketing support</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>