force-app/main/default/objects/Event_Expense__c/fields/Marketing_support_Other__c.field-meta.xml
<CustomField>
    <fullName>Marketing_support_Other__c</fullName>
    <label>Description of Marketing Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>