force-app/main/default/objects/Event_Expense__c/fields/Number_of_guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_guests__c</fullName>
    <label>Number of guests</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-10</fullName>
            </value>
            <value>
                <fullName>11-20</fullName>
            </value>
            <value>
                <fullName>21-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>&gt;100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>