force-app/main/default/objects/Event_Expense__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <description>RFC#2547 - created new field as part of CF Expense Request functionality.</description>
    <formula>TEXT(Requestor_Name__r.Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office</label>
    <type>Text</type>
</CustomField>