force-app/main/default/objects/Event_Expense__c/fields/Onsite_Support_Needed__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Support_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RFC#2547 - created new field as part of CF Expense Request functionality.</description>
    <inlineHelpText>Will this event need onsite admin support?</inlineHelpText>
    <label>Onsite Support Needed?</label>
    <type>Checkbox</type>
</CustomField>