force-app/main/default/objects/Event_Expense__c/fields/Potential_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Potential_Revenue__c</fullName>
    <label>Potential Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>