force-app/main/default/objects/Event_Expense__c/fields/Primary_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Primary_phone_number__c</fullName>
    <formula>Requestor_Name__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary phone number</label>
    <type>Text</type>
</CustomField>