force-app/main/default/objects/Event_Expense__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CVAS</fullName>
            </value>
            <value>
                <fullName>DRC</fullName>
            </value>
            <value>
                <fullName>FO</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>HC</fullName>
            </value>
            <value>
                <fullName>NRG</fullName>
            </value>
            <value>
                <fullName>PV</fullName>
            </value>
            <value>
                <fullName>REVS</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>TO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>