force-app/main/default/objects/Event_Expense__c/fields/Related_campaign_if_30_guests__c.field-meta.xml
<CustomField>
    <fullName>Related_campaign_if_30_guests__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Related Campaign or External Guest List is Required.</inlineHelpText>
    <label>Related Campaign (if 30+ guests)</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Event_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>