force-app/main/default/objects/Event_Expense__c/fields/Requested_Event_Budget_excluding_Travel__c.field-meta.xml
<CustomField>
    <fullName>Requested_Event_Budget_excluding_Travel__c</fullName>
    <formula>Total_Budget_Requested__c -  Expected_Travel_cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Event Budget excluding Travel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>