force-app/main/default/objects/Event_Expense__c/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Requestor can only be HL internal employee</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Houlihan Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HL_Expense Requests (Requesting Officer)</relationshipLabel>
    <relationshipName>Event_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>