force-app/main/default/objects/Event_Expense__c/fields/Requestor_s_User__c.field-meta.xml
<CustomField>
    <fullName>Requestor_s_User__c</fullName>
    <formula>Requestor_Name__r.User_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor&apos;s User</label>
    <type>Text</type>
</CustomField>