force-app/main/default/objects/Event_Expense__c/fields/Specify__c.field-meta.xml
<CustomField>
    <fullName>Specify__c</fullName>
    <label>Description of Other Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>