force-app/main/default/objects/Event_Expense__c/fields/SubLedger_Number__c.field-meta.xml
<CustomField>
    <fullName>SubLedger_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Ledger Number</label>
    <referenceTo>Sub_Ledger_Number__c</referenceTo>
    <relationshipName>HL_Event_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>