force-app/main/default/objects/Event_Expense__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <label>Target Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lawyers</fullName>
            </value>
            <value>
                <fullName>Directors</fullName>
            </value>
            <value>
                <fullName>C-Suite Executives</fullName>
            </value>
            <value>
                <fullName>Accountants / Auditors</fullName>
            </value>
            <value>
                <fullName>Women&apos;s Initiative</fullName>
            </value>
            <value>
                <fullName>Internal Staff Only</fullName>
            </value>
            <value>
                <fullName>Existing Clients</fullName>
            </value>
            <value>
                <fullName>Platinum Clients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>