force-app/main/default/objects/Event_Expense__c/fields/Total_Budget_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Requested__c</fullName>
    <formula>IF(TEXT(LOB__c) = &apos;FVA&apos;, Expected_Travel_cost__c  +  Expected_F_B_cost__c  +  Any_additional_cost_Specify__c, IF(TEXT(LOB__c) = &apos;CF&apos;, Expected_Airfare_Cost__c + Expected_Lodging_Cost__c + Expected_Registration_Fee__c +  Expected_F_B_cost__c  +  Any_additional_cost_Specify__c, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget Requested</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>