force-app/main/default/objects/Event_Expense__c/fields/What_are_KPIs__c.field-meta.xml
<CustomField>
    <fullName>What_are_KPIs__c</fullName>
    <label>What are KPIs?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>