force-app/main/default/objects/Event_Expense__c/fields/What_is_desired_outcome_of_this_event__c.field-meta.xml
<CustomField>
    <fullName>What_is_desired_outcome_of_this_event__c</fullName>
    <label>What is desired outcome of this event?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>