force-app/main/default/objects/Event_Expense__c/fields/When_this_event_will_be_evaluated__c.field-meta.xml
<CustomField>
    <fullName>When_this_event_will_be_evaluated__c</fullName>
    <label>When this event will be evaluated?</label>
    <type>Date</type>
</CustomField>