force-app/main/default/objects/Event_Expense__c/fields/Who_is_evaluating_the_event__c.field-meta.xml
<CustomField>
    <fullName>Who_is_evaluating_the_event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who is evaluating the event?</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Evaluator can only be HL internal employee</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Houlihan Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Event_Expenses2</relationshipName>
    <type>Lookup</type>
</CustomField>