force-app/main/default/objects/Event_Expense__c/validationRules/EndDateShouldBeGreaterThanStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateShouldBeGreaterThanStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>(Start_Date__c &gt;  End_Date__c) &amp;&amp;  NOT( ISNEW() ) &amp;&amp;  ISPICKVAL(Status__c, &apos;Waiting for Approval&apos;) &amp;&amp;  ISCHANGED(Status__c)</errorConditionFormula>
    <errorMessage>End Date should be greater than or equal to Start Date.</errorMessage>
</ValidationRule>