force-app/main/default/objects/Event_Expense__c/validationRules/EvaluationDateShouldGreaterThanStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EvaluationDateShouldGreaterThanStartDate</fullName>
    <active>true</active>
    <errorConditionFormula>(When_this_event_will_be_evaluated__c &lt;   Start_Date__c) &amp;&amp;  NOT( ISNEW() ) &amp;&amp;  ISPICKVAL(Status__c, &apos;Waiting for Approval&apos;) &amp;&amp;  ISCHANGED(Status__c)</errorConditionFormula>
    <errorMessage>The date when this event will be evaluated, should be greater than or equal to Start Date.</errorMessage>
</ValidationRule>