force-app/main/default/objects/Event_Expense__c/validationRules/NoChangeIfStatusIsDeleted.validationRule-meta.xml
<ValidationRule>
    <fullName>NoChangeIfStatusIsDeleted</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(  PRIORVALUE(Status__c)  , &apos;Deleted&apos;)</errorConditionFormula>
    <errorMessage>Event Expense cannot be modified once it is moved in &apos;Deleted&apos; state.</errorMessage>
</ValidationRule>